chore: Update page title to "Streamify"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Video streaming platform allows users to share videos and view them">
-  <title>VideoTube</title>
+  <title>Streamify</title>
 </head>
 
 <body>
